# auv_msgs

./: CHANGELOG.rst  CMakeLists.txt  package.xml
msg/: BodyForceRequest.msg  BodyVelocityRequest.msg  NavigationStatus.msg  VehiclePoseArray.msg  WorldWaypointRequest.msg
